// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GovBanner component static content renders consistently in English for .gov sites 1`] = `
<section
  className="usa-banner"
  data-testid="govBanner"
>
  <div
    className="usa-accordion"
  >
    <header
      className="usa-banner__header"
    >
      <div
        className="usa-banner__inner"
      >
        <div
          className="grid-col-auto"
        >
          <img
            alt="U.S. flag"
            className="usa-banner__header-flag"
            src="test-file-stub"
          />
        </div>
        <div
          className="grid-col-fill tablet:grid-col-auto"
        >
          <p
            className="usa-banner__header-text"
          >
            An official website of the United States government
          </p>
          <p
            aria-hidden="true"
            className="usa-banner__header-action"
          >
            Here’s how you know
          </p>
        </div>
        <button
          aria-controls="gov-banner"
          aria-expanded={false}
          className="usa-accordion__button usa-banner__button"
          onClick={[Function]}
          type="button"
        >
          <span
            className="usa-banner__button-text"
          >
            Here’s how you know
          </span>
        </button>
      </div>
    </header>
    <div
      className="usa-banner__content usa-accordion__content"
      hidden={true}
      id="gov-banner"
    >
      <div
        className="grid-row grid-gap-lg"
      >
        <div
          className="usa-banner__guidance tablet:grid-col-6"
        >
          <img
            alt=""
            aria-hidden="true"
            className="usa-banner__icon usa-media-block__img"
            role="img"
            src="test-file-stub"
          />
          <div
            className="usa-media-block__body"
          >
            <p>
              <strong>
                Official websites use .gov
              </strong>
              <br />
              A 
              <strong>
                .gov
              </strong>
               website belongs to an official government organization in the United States.
            </p>
          </div>
        </div>
        <div
          className="usa-banner__guidance tablet:grid-col-6"
        >
          <img
            alt=""
            aria-hidden="true"
            className="usa-banner__icon usa-media-block__img"
            role="img"
            src="test-file-stub"
          />
          <div
            className="usa-media-block__body"
          >
            <p>
              <strong>
                Secure .gov websites use HTTPS
              </strong>
              <br />
              A 
              <strong>
                lock (
                <span
                  className="icon-lock"
                >
                  <img
                    alt="lock"
                    className="usa-banner__lock-image"
                    role="img"
                    src="test-file-stub"
                    title="Lock"
                  />
                </span>
                )
              </strong>
               or 
              <strong>
                https://
              </strong>
               means you’ve safely connected to the 
              .gov
               website. Share sensitive information only on official, secure websites.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`GovBanner component static content renders consistently in English for .mil sites 1`] = `
<section
  className="usa-banner"
  data-testid="govBanner"
>
  <div
    className="usa-accordion"
  >
    <header
      className="usa-banner__header"
    >
      <div
        className="usa-banner__inner"
      >
        <div
          className="grid-col-auto"
        >
          <img
            alt="U.S. flag"
            className="usa-banner__header-flag"
            src="test-file-stub"
          />
        </div>
        <div
          className="grid-col-fill tablet:grid-col-auto"
        >
          <p
            className="usa-banner__header-text"
          >
            An official website of the United States government
          </p>
          <p
            aria-hidden="true"
            className="usa-banner__header-action"
          >
            Here’s how you know
          </p>
        </div>
        <button
          aria-controls="gov-banner"
          aria-expanded={false}
          className="usa-accordion__button usa-banner__button"
          onClick={[Function]}
          type="button"
        >
          <span
            className="usa-banner__button-text"
          >
            Here’s how you know
          </span>
        </button>
      </div>
    </header>
    <div
      className="usa-banner__content usa-accordion__content"
      hidden={true}
      id="gov-banner"
    >
      <div
        className="grid-row grid-gap-lg"
      >
        <div
          className="usa-banner__guidance tablet:grid-col-6"
        >
          <img
            alt=""
            aria-hidden="true"
            className="usa-banner__icon usa-media-block__img"
            role="img"
            src="test-file-stub"
          />
          <div
            className="usa-media-block__body"
          >
            <p>
              <strong>
                Official websites use .mil
              </strong>
              <br />
              A 
              <strong>
                .mil
              </strong>
               website belongs to an official U.S. Department of Defense organization.
            </p>
          </div>
        </div>
        <div
          className="usa-banner__guidance tablet:grid-col-6"
        >
          <img
            alt=""
            aria-hidden="true"
            className="usa-banner__icon usa-media-block__img"
            role="img"
            src="test-file-stub"
          />
          <div
            className="usa-media-block__body"
          >
            <p>
              <strong>
                Secure .mil websites use HTTPS
              </strong>
              <br />
              A 
              <strong>
                lock (
                <span
                  className="icon-lock"
                >
                  <img
                    alt="lock"
                    className="usa-banner__lock-image"
                    role="img"
                    src="test-file-stub"
                    title="Lock"
                  />
                </span>
                )
              </strong>
               or 
              <strong>
                https://
              </strong>
               means you’ve safely connected to the 
              .mil
               website. Share sensitive information only on official, secure websites.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`GovBanner component static content renders consistently in Spanish for .gov sites 1`] = `
<section
  className="usa-banner"
  data-testid="govBanner"
>
  <div
    className="usa-accordion"
  >
    <header
      className="usa-banner__header"
    >
      <div
        className="usa-banner__inner"
      >
        <div
          className="grid-col-auto"
        >
          <img
            alt="U.S. flag"
            className="usa-banner__header-flag"
            src="test-file-stub"
          />
        </div>
        <div
          className="grid-col-fill tablet:grid-col-auto"
        >
          <p
            className="usa-banner__header-text"
          >
            Un sitio oficial del Gobierno de Estados Unidos
          </p>
          <p
            aria-hidden="true"
            className="usa-banner__header-action"
          >
            Así es como usted puede verificarlo
          </p>
        </div>
        <button
          aria-controls="gov-banner"
          aria-expanded={false}
          className="usa-accordion__button usa-banner__button"
          onClick={[Function]}
          type="button"
        >
          <span
            className="usa-banner__button-text"
          >
            Así es como usted puede verificarlo
          </span>
        </button>
      </div>
    </header>
    <div
      className="usa-banner__content usa-accordion__content"
      hidden={true}
      id="gov-banner"
    >
      <div
        className="grid-row grid-gap-lg"
      >
        <div
          className="usa-banner__guidance tablet:grid-col-6"
        >
          <img
            alt=""
            aria-hidden="true"
            className="usa-banner__icon usa-media-block__img"
            role="img"
            src="test-file-stub"
          />
          <div
            className="usa-media-block__body"
          >
            <p>
              <strong>
                Los sitios web oficiales usan .gov
              </strong>
              <br />
              Un sitio web 
              <strong>
                .gov
              </strong>
               pertenece a una organización oficial del Gobierno de Estados Unidos.
            </p>
          </div>
        </div>
        <div
          className="usa-banner__guidance tablet:grid-col-6"
        >
          <img
            alt=""
            aria-hidden="true"
            className="usa-banner__icon usa-media-block__img"
            role="img"
            src="test-file-stub"
          />
          <div
            className="usa-media-block__body"
          >
            <p>
              <strong>
                Los sitios web seguros .gov usan HTTPS
              </strong>
              <br />
              Un 
              <strong>
                candado (
                <span
                  className="icon-lock"
                >
                  <img
                    alt="lock"
                    className="usa-banner__lock-image"
                    role="img"
                    src="test-file-stub"
                    title="Lock"
                  />
                </span>
                )
              </strong>
               o 
              <strong>
                https://
              </strong>
               
              significa que usted se conectó de forma segura a un sitio web 
              .gov
              . Comparta información sensible sólo en sitios web oficiales y seguros.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`GovBanner component static content renders consistently in Spanish for .mil sites 1`] = `
<section
  className="usa-banner"
  data-testid="govBanner"
>
  <div
    className="usa-accordion"
  >
    <header
      className="usa-banner__header"
    >
      <div
        className="usa-banner__inner"
      >
        <div
          className="grid-col-auto"
        >
          <img
            alt="U.S. flag"
            className="usa-banner__header-flag"
            src="test-file-stub"
          />
        </div>
        <div
          className="grid-col-fill tablet:grid-col-auto"
        >
          <p
            className="usa-banner__header-text"
          >
            Un sitio oficial del Gobierno de Estados Unidos
          </p>
          <p
            aria-hidden="true"
            className="usa-banner__header-action"
          >
            Así es como usted puede verificarlo
          </p>
        </div>
        <button
          aria-controls="gov-banner"
          aria-expanded={false}
          className="usa-accordion__button usa-banner__button"
          onClick={[Function]}
          type="button"
        >
          <span
            className="usa-banner__button-text"
          >
            Así es como usted puede verificarlo
          </span>
        </button>
      </div>
    </header>
    <div
      className="usa-banner__content usa-accordion__content"
      hidden={true}
      id="gov-banner"
    >
      <div
        className="grid-row grid-gap-lg"
      >
        <div
          className="usa-banner__guidance tablet:grid-col-6"
        >
          <img
            alt=""
            aria-hidden="true"
            className="usa-banner__icon usa-media-block__img"
            role="img"
            src="test-file-stub"
          />
          <div
            className="usa-media-block__body"
          >
            <p>
              <strong>
                Los sitios web oficiales usan .mil
              </strong>
              <br />
              Un sitio web 
              <strong>
                .mil
              </strong>
               pertenece a una organización oficial del Departamento de Defensa de EE. UU.
            </p>
          </div>
        </div>
        <div
          className="usa-banner__guidance tablet:grid-col-6"
        >
          <img
            alt=""
            aria-hidden="true"
            className="usa-banner__icon usa-media-block__img"
            role="img"
            src="test-file-stub"
          />
          <div
            className="usa-media-block__body"
          >
            <p>
              <strong>
                Los sitios web seguros .mil usan HTTPS
              </strong>
              <br />
              Un 
              <strong>
                candado (
                <span
                  className="icon-lock"
                >
                  <img
                    alt="lock"
                    className="usa-banner__lock-image"
                    role="img"
                    src="test-file-stub"
                    title="Lock"
                  />
                </span>
                )
              </strong>
               o 
              <strong>
                https://
              </strong>
               
              significa que usted se conectó de forma segura a un sitio web 
              .mil
              . Comparta información sensible sólo en sitios web oficiales y seguros.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`GovBanner component static content renders consistently with default props 1`] = `
<section
  className="usa-banner"
  data-testid="govBanner"
>
  <div
    className="usa-accordion"
  >
    <header
      className="usa-banner__header"
    >
      <div
        className="usa-banner__inner"
      >
        <div
          className="grid-col-auto"
        >
          <img
            alt="U.S. flag"
            className="usa-banner__header-flag"
            src="test-file-stub"
          />
        </div>
        <div
          className="grid-col-fill tablet:grid-col-auto"
        >
          <p
            className="usa-banner__header-text"
          >
            An official website of the United States government
          </p>
          <p
            aria-hidden="true"
            className="usa-banner__header-action"
          >
            Here’s how you know
          </p>
        </div>
        <button
          aria-controls="gov-banner"
          aria-expanded={false}
          className="usa-accordion__button usa-banner__button"
          onClick={[Function]}
          type="button"
        >
          <span
            className="usa-banner__button-text"
          >
            Here’s how you know
          </span>
        </button>
      </div>
    </header>
    <div
      className="usa-banner__content usa-accordion__content"
      hidden={true}
      id="gov-banner"
    >
      <div
        className="grid-row grid-gap-lg"
      >
        <div
          className="usa-banner__guidance tablet:grid-col-6"
        >
          <img
            alt=""
            aria-hidden="true"
            className="usa-banner__icon usa-media-block__img"
            role="img"
            src="test-file-stub"
          />
          <div
            className="usa-media-block__body"
          >
            <p>
              <strong>
                Official websites use .gov
              </strong>
              <br />
              A 
              <strong>
                .gov
              </strong>
               website belongs to an official government organization in the United States.
            </p>
          </div>
        </div>
        <div
          className="usa-banner__guidance tablet:grid-col-6"
        >
          <img
            alt=""
            aria-hidden="true"
            className="usa-banner__icon usa-media-block__img"
            role="img"
            src="test-file-stub"
          />
          <div
            className="usa-media-block__body"
          >
            <p>
              <strong>
                Secure .gov websites use HTTPS
              </strong>
              <br />
              A 
              <strong>
                lock (
                <span
                  className="icon-lock"
                >
                  <img
                    alt="lock"
                    className="usa-banner__lock-image"
                    role="img"
                    src="test-file-stub"
                    title="Lock"
                  />
                </span>
                )
              </strong>
               or 
              <strong>
                https://
              </strong>
               means you’ve safely connected to the 
              .gov
               website. Share sensitive information only on official, secure websites.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;
